--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node app4.js"
   },
   "dependencies": {
+    "@mermaid-js/mermaid-cli": "^11.4.2",
     "aedes": "^0.51.3",
     "dot-prop": ">=5.1.1",
     "ejs": "^3.1.10",
